Bug Fix - Members Alignment

--- a/assets/css/members.css
+++ b/assets/css/members.css
@@ -17,6 +17,7 @@
 
 /* Section - members - container*/
 .members-container {
+    display: inline-block;
     width: 100%;
     padding: 10px;
     box-sizing: border-box;
